--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "npx ava"
+    "test": "npx ava -v test.js"
   },
   "keywords": [],
   "author": "",
@@ -28,6 +28,9 @@
   },
   "dependencies": {
     "ava": "^2.4.0",
+    "axios": "^0.19.0"
+  },
+  "devDependencies": {
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
