--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test:details": "npx ava ${TESTER:=test-ex-1-3.js} --serial --tap | npx faucet",
     "test": "npx ava ${TESTER:=test-ex-1-3.js} --serial -v",
+    "release": "release-it"
   },
   "keywords": [],
   "author": "adrienjoly",
@@ -35,9 +36,15 @@
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-prettier": "^3.1.1",
-    "prettier": "^1.19.1"
+    "prettier": "^1.19.1",
+    "release-it": "^13.5.1"
   },
   "prettier": {
     "singleQuote": true
+  },
+  "release-it": {
+    "github": {
+      "release": true
+    }
   }
 }
