--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
   },
   "dependencies": {
     "ava": "^2.4.0",
-    "axios": "^0.19.0"
+    "axios": "^0.19.0",
+    "babel-runtime": "^6.26.0",
+    "mongodb": "^3.5.5",
+    "mongomem": "^0.1.9"
   },
   "devDependencies": {
     "eslint": "^6.7.2",
